# Unified-V2

./: README.md  main.rs
unified/: Cargo.toml
unified/src/: Cargo.toml  alerts.rs  collector.rs  config.rs  main.rs  monitoring.rs  network.rs  vulnerabilities.rs  web.rs
unified/src/db/: neo4.rs
unified/src/web/: app.js  index.html  styles.css
