[package]
name = "unified"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version="1.36", features=["full"]}
axum = "0.6"
serde = {version="1.0", features=["derive"]}
serde_json="1.0"
reqwest={version="0.11", features=["json", "tls"]}
tracing="0.1"
tracing-subscriber="0.3"
tokio-tungstenite="0.20"
tower="0.4"
hyper={version="0.14", features=["server", "client", "tcp"]}

